[package]
name = "hcor"
version = "1.0.2"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hcor"

[[bin]]
name = "verify"
path = "./src/config/verify/bin.rs"
required-features = [ "config_verify" ]

[features]
config_verify = [ "serde_yaml", "yaml-merge-keys", "ngrammatic" ]
message_derive = [ "actix" ]
simultaneous_systems = [ "client", "dashmap" ]
client = [ "awc", "actix", "bytes", "actix-codec", "tokio", "bincode", "futures" ]

[dependencies]
# (de)serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-diff = "0.3.1"

# misc. util
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = [ "serde" ] }
rand = "0.7"
lazy_static = "1.4"

# client
awc = { version = "1.0.1", optional = true }
# wormhole_client
bincode = { version = "1.3.1", optional = true }
actix = { version = "0.9.0", optional = true }
bytes = { version = "0.5.6", optional = true }
actix-codec = { version = "0.2.0", optional = true }
tokio = { version = "0.2.22", optional = true }
futures = { version = "0.3.5", optional = true }
log = "0.4.11"

# simultaneous systems
dashmap = { version = "3.11.10", optional = true }
walkdir = "2.3.1"

# config verify
yaml-merge-keys = { version = "0.4.1", features = [ "serde_yaml" ], optional = true }
serde_yaml = { version = "0.8.13", optional = true }
ngrammatic = { version = "0.3.1", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4.0"
