[package]
name = "hcor"
version = "2.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hcor"

[[bin]]
name = "verify"
path = "./src/config/verify/bin.rs"
required-features = [ "config_verify" ]

[[bin]]
name = "message_size"
path = "./src/wormhole/message_size.rs"
required-features = [ "flate2", "serde_json" ]

[features]
config_verify = [ "serde_yaml", "yaml-merge-keys", "ngrammatic", "pretty_env_logger", "serde_json" ]
message_derive = [ "actix" ]
simultaneous_systems = [ "client", "dashmap" ]
client = [ "awc", "actix", "bytes", "actix-codec", "tokio", "futures", "serde_json" ]

[dependencies]
# (de)serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
bincode = "1.3.1"
zstd = "0.5.3"
serde-diff = { git = "https://github.com/cedric-h/serde-diff.git" }

# misc. util
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = [ "serde" ] }
rand = "0.7"
lazy_static = "1.4"

# client
awc = { version = "1.0.1", optional = true }
# wormhole_client
actix = { version = "0.9.0", optional = true }
bytes = { version = "0.5.6", optional = true }
actix-codec = { version = "0.2.0", optional = true }
tokio = { version = "0.2.22", optional = true }
futures = { version = "0.3.5", optional = true }
log = "0.4.11"

# simultaneous systems
dashmap = { version = "3.11.10", optional = true }
walkdir = "2.3.1"

# config verify
yaml-merge-keys = { version = "0.4.1", features = [ "serde_yaml" ], optional = true }
serde_yaml = { version = "0.8.13", optional = true }
ngrammatic = { version = "0.3.1", optional = true }
pretty_env_logger = { version = "0.4.0", optional = true }
flate2 = { version = "1.0.17", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4.0"
