[package]
name = "hcor"
version = "1.2.2"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.49"
rand = "0.7.3"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
futures = { version = "0.3.4", features = ["compat"] }
regex = "1.3.6"
lazy_static = "1.4.0"
humantime = "2.0.0"
log = "0.4.8"
actix-web = { version = "2.0", optional = true }
derive_more = "0.99"
dotenv = "0.15"
reqwest = { version = "0.11.1", features = ["json"] }
tokio = "1.0"

mongodb = {version = "1.0", optional = true}

[[bin]]
name = "yank_config"
path = "src/bin/yank_config.rs"

[lib]
name = "hcor"

[features]
actix = ["actix-web"]
mongo = ["mongodb"]
